# know-net

./: .gitignore  README.md  builder3.pkl  ontology.owl  pyproject.toml  t.owl
data/: turtle_0  turtle_1  turtle_10  turtle_11  turtle_12  turtle_13  turtle_14  turtle_15  turtle_16  turtle_17  turtle_18  turtle_19  turtle_2  turtle_20  turtle_21  turtle_22  turtle_23  turtle_24  turtle_25  turtle_26  turtle_27  turtle_28  turtle_29  turtle_3  turtle_30  turtle_31  turtle_32  turtle_33  turtle_34  turtle_35  turtle_36  turtle_37  turtle_4  turtle_5  turtle_6  turtle_7  turtle_8  turtle_9
know_net/: base.py  graph_building.py  graphqa.py  langchain_utilities.py  make_merged_owl.py  mixins.py  ontology_classes.py  owl_maker.py  streamlit_app.py
know_net/content_retrievers/: content_filters.py  content_parsers.py  hyperlink_finders.py  news_site_crawler.py  webscraper.py
know_net/embedders/: bert_embedder.py
know_net/triplet_extraction/: causal_relationship_extractor.py  generative_triplet_finder.py
tests/: test_bert_embedder.py  test_graph_building.py  test_news_site_crawler.py  test_triplet_extractor.py  test_webscraper.py  test_yahoo_news_graph_building.py
