[tool.poetry]
name = "know-net"
version = "0.1.0"
description = ""
authors = ["Arthu, Wian"]
readme = "README.md"
packages = [{include = "know_net"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
networkx = "^3.1"
langchain = "^0.0.234"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
